force-app/main/default/objects/Public_Announcement__c/Public_Announcement__c.object-meta.xml
<CustomObject>
    <description>Used to publish public notifications or announcements to citizens, such as service disruptions, upcoming maintenance, or awareness campaigns. Helps improve communication and transparency.</description>
    <label>Public Announcement</label>
    <nameField>
        <label>Public Announcement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Public Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>