force-app/main/default/objects/Public_Announcement__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ensures accountability by showing which department is making the announcement.</description>
    <inlineHelpText>Ensures accountability by showing which department is making the announcement.</inlineHelpText>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Public Announcements</relationshipLabel>
    <relationshipName>Public_Announcements</relationshipName>
    <type>Lookup</type>
</CustomField>