force-app/main/default/objects/Public_Announcement__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Full details of the announcement.</description>
    <inlineHelpText>Full details of the announcement.</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>