force-app/main/default/objects/Public_Announcement__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Short headline for the announcement.</description>
    <inlineHelpText>Short headline for the announcement.</inlineHelpText>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>