force-app/main/default/objects/Public_Announcement__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <description>Start date for the announcement validity.</description>
    <inlineHelpText>Start date for the announcement validity.</inlineHelpText>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>