force-app/main/default/objects/Public_Announcement__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <description>End date for the announcement validity.</description>
    <inlineHelpText>End date for the announcement validity.</inlineHelpText>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>